# ProjectDelta

./: .editorconfig  .gitattributes  .licenserc.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
DeltaTrigger/: CMakeLists.txt  main.cpp
DeltaTrigger/lib/: CMakeLists.txt
DeltaTrigger/lib/include/trigger/: trigger.h
DeltaTrigger/lib/src/trigger/: trigger.cpp  trigger_win32.cpp
Docker/: Dockerfile
Engine/: CMakeLists.txt
Engine/include/delta/: definitions.h  engine.h  pch.h
Engine/include/delta/core/: engine.h  memory.h
Engine/include/delta/platform/: os.h  os_types.h
Engine/src/: engine.cpp
Engine/src/delta/: engine.cpp  internal_definitions.h  pch.cpp  pch.h
Engine/src/delta/core/: EngineTypes.h  FrameAllocator.cpp  FrameAllocator.h  FreeListAllocator.cpp  FreeListAllocator.h  GameWorker.cpp  GameWorker.h  MemoryConfig.cpp  MemoryConfig.h  MemoryManager.cpp  MemoryManager.h  ThreadContext.cpp  ThreadContext.h  Worker.cpp  Worker.h  engine.cpp
Engine/src/delta/platform/: compiler.h  os.h  os_internal.h  os_internal_types.h  os_linux.cpp  os_win32.cpp
Examples/: CMakeLists.txt
Examples/HelloWorldGame/: CMakeLists.txt  game.cpp
Launcher/: CMakeLists.txt  main.cpp
cmake/: DeltaGame.cmake
